--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.27.1",
+    "@astrojs/starlight-tailwind": "^2.0.3",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.15.3",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "starlight-openapi-rapidoc": "^0.8.1-beta",
+    "tailwindcss": "^3.4.12"
   }
 }
