--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.15.3",
     "sharp": "^0.32.5",
+    "starlight-openapi": "^0.7.0",
     "starlight-openapi-rapidoc": "^0.8.1-beta",
     "tailwindcss": "^3.4.12"
   }
